--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,10 +23,10 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+/* body {
   display: flex;
   justify-content: center;
-}
+} */
 
 h1 {
   font-size: 3.2em;
@@ -34,13 +34,9 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -63,4 +59,24 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+/* @custom-variant sidebar-expanded (&:is(.sidebar-expanded *)); */
+.fade-enter {
+  transform: translateX(100%);
+  opacity: 0;
+}
+.fade-enter-active {
+  transform: translateX(0);
+  opacity: 1;
+  transition: all 300ms ease-in-out;
+}
+.fade-exit {
+  transform: translateX(0);
+  opacity: 1;
+}
+.fade-exit-active {
+  transform: translateX(100%);
+  opacity: 0;
+  transition: all 300ms ease-in-out;
 }
