--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,6 +18,7 @@ a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
+  /* border:#646cff 1px solid */
 }
 a:hover {
   color: #535bf2;
@@ -79,4 +80,22 @@ button:focus-visible {
   transform: translateX(100%);
   opacity: 0;
   transition: all 300ms ease-in-out;
+}
+
+::-webkit-scrollbar {
+  height: 8px; /* chiều cao khi cuộn ngang */
+  width: 8px;  /* chiều rộng khi cuộn dọc */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #9ca3af; /* màu xám trung bình */
+  border-radius: 9999px; /* bo tròn */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #6b7280; /* hover đậm hơn */
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f3f4f6; /* màu nền của track */
 }
