--- a/client/src/index.css
+++ b/client/src/index.css
@@ -99,3 +99,15 @@ button:focus-visible {
 ::-webkit-scrollbar-track {
   background-color: #f3f4f6; /* màu nền của track */
 }
+
+@keyframes gradient-animation {
+  0% {
+      background-position: 0% 50%;
+  }
+  50% {
+      background-position: 100% 50%;
+  }
+  100% {
+      background-position: 0% 50%;
+  }
+}
