--- a/client/src/index.css
+++ b/client/src/index.css
@@ -71,9 +71,9 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  button {
+  /* button {
     background-color: #f9f9f9;
-  }
+  } */
 }
 
 /* @custom-variant sidebar-expanded (&:is(.sidebar-expanded *)); */
